Update and clean up dotfiles.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,9 @@
 ## source powerline configuration
 source-file ~/.powerline/powerline/bindings/tmux/powerline.conf
 
+## 256 colors
+# set -g default-terminal "tmux" # not needed - this messed everything up.
+
 ## allows for mouse copy/paste
 set -g mouse on # allows for mouse wheel scrolling
 
@@ -8,7 +11,7 @@ set -g mouse on # allows for mouse wheel scrolling
 # set -g mouse-utf8 on
 
 # auto window rename
-set-window-option -g automatic-rename
+# set-window-option -g automatic-rename # this apparently drains more battery..
 
 ## reload configuration
 bind-key C-r source-file ~/.tmux.conf \; display-message "Configuration reloaded..."
