--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,6 @@
+# A daemon to reduce the resource consumption of powerline by having a single python process that serves all powerline requests
+run-shell "powerline-daemon -q"
+
 ## source powerline configuration
 source-file ~/.powerline/powerline/bindings/tmux/powerline.conf
 
@@ -9,6 +12,9 @@ set -g mouse on # allows for mouse wheel scrolling
 
 # this line doesn't work for some reason "mouse-utf8 not found"
 # set -g mouse-utf8 on
+
+# set only on OS X where it's required
+set -g default-command "reattach-to-user-namespace -l zsh"
 
 # auto window rename
 # set-window-option -g automatic-rename # this apparently drains more battery..
